# llm-eval-kit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: contains_eval.yaml  llm_judge_eval.yaml  sample_eval.yaml
src/llm_eval_kit/: __init__.py  cli.py  runner.py  schemas.py  scraper.py
src/llm_eval_kit/evaluators/: base.py  contains.py  exact_match.py  llm_judge.py
src/llm_eval_kit/models/: anthropic.py  base.py  browser.py  dry_run.py  ollama.py  openai.py
src/llm_eval_kit/reporters/: html_report.py  json_report.py
tests/: test_browser_model.py  test_evaluators.py  test_html_report_e2e.py  test_runner.py  test_schemas.py  test_scraper.py
