[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-eval-kit"
version = "0.1.0"
description = "A lightweight CLI tool and library for evaluating LLM outputs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Arshdeep Singh" },
]
keywords = ["llm", "evaluation", "testing", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.9.0",       # CLI framework (like click but simpler)
    "rich>=13.0.0",       # Beautiful terminal output (tables, colors)
    "pyyaml>=6.0",        # Parse YAML test suite files
    "pydantic>=2.0",      # Data validation and schemas
    "httpx>=0.27.0",      # HTTP client (to talk to LLM APIs)
]

[project.optional-dependencies]
# Users can install these extras if they want specific features
similarity = [
    "sentence-transformers>=2.2.0",  # For semantic similarity evaluator
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",        # Linter + formatter
]

# This creates the CLI command: when users type "llm-eval-kit", it runs cli.app()
[project.scripts]
llm-eval-kit = "llm_eval_kit.cli:app"

[tool.ruff]
line-length = 100
